<resources>
    <string name="app_name">Webservices</string>
    <string name="nethz_name">forstesa</string>
    <string name="button1_text">REST Client</string>
    <string name="button2_text">SOAP Client</string>
    <string name="button3_text">REST Server</string>
    <string name="btn_raw_text">Get Temperature using a raw HTTP request</string>
    <string name="btn_url_text">Get Temperature using a URL connection</string>
    <string name="btn_json_text">Get Temperature using JSON</string>
    <string name="btn_xml_text">Get Temperature using an XML request</string>
    <string name="btn_soap_text">Get Temperature using a SOAP envelope</string>
    <string name="temperature">Temperature: %1$f</string>
    <string name="rest_server_toggle_button_off_text">Start REST Server</string>
    <string name="rest_server_toggle_button_on_text">REST Server Running</string>
    <string name="socket_exception_text">Couldn\'t get network interface information</string>
    <string name="bind_exception_text">Couldn\'t bind to address</string>
    <string name="connection_failed">Failed to make connection</string>
    <string name="network_information_down">Server will be listening on %1$s</string>
    <string name="network_information_up">Server is listening on %1$s</string>
    <string name="network_instruction">Choose the interface in the list below</string>
    <string name="no_interface_chosen">Please choose an interface before starting the server</string>
</resources>
