<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.ethz.inf.vs.a2.webservices.SoapClient">

    <TextView android:id="@+id/soapTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="40sp"/>

    <Button android:id="@+id/btn_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_xml_text"
        android:onClick="onClickXml"/>

    <Button android:id="@+id/btn_soap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_soap_text"
        android:onClick="onClickSoap"/>

</LinearLayout>
