<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.ethz.inf.vs.a2.webservices.MainActivity">

    <Button
        android:id="@+id/button_rest_client"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/button1_text"
        android:onClick="onClickRestClient"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/button_soap_client"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/button2_text"
        android:onClick="onClickSoapClient"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/button_rest_server"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/button3_text"
        android:onClick="onClickRestServer"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />


</LinearLayout>
